// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v1 ramp characterization (frozen — must not change) > green N=2 1`] = `
[
  "#020d00",
  "#37cd76",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > green N=4 1`] = `
[
  "#020d00",
  "#18842b",
  "#37cd76",
  "#8effc6",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > green N=7 1`] = `
[
  "#020d00",
  "#083b00",
  "#006f11",
  "#24963e",
  "#30b25b",
  "#37cd76",
  "#93ffbd",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > green N=16 1`] = `
[
  "#020d00",
  "#051f00",
  "#083300",
  "#074800",
  "#005e04",
  "#037316",
  "#18842b",
  "#22933b",
  "#29a049",
  "#2eac54",
  "#31b65f",
  "#34c16a",
  "#37cd76",
  "#45d885",
  "#5beb9a",
  "#92ffbf",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > green N=64 1`] = `
[
  "#020d00",
  "#031100",
  "#031500",
  "#041a00",
  "#051e00",
  "#062300",
  "#072800",
  "#072d00",
  "#083200",
  "#083700",
  "#083c00",
  "#084200",
  "#074700",
  "#054c00",
  "#035200",
  "#015700",
  "#005d02",
  "#006206",
  "#00670a",
  "#006c0f",
  "#017114",
  "#07751a",
  "#0d7a1f",
  "#127e24",
  "#168229",
  "#19862e",
  "#1c8a32",
  "#1f8e36",
  "#219139",
  "#23953d",
  "#259840",
  "#279b43",
  "#289e47",
  "#2aa14a",
  "#2ba44d",
  "#2ca74f",
  "#2daa52",
  "#2eac55",
  "#2faf58",
  "#2fb15a",
  "#30b45d",
  "#31b760",
  "#32b962",
  "#32bc65",
  "#33bf68",
  "#34c16a",
  "#34c46d",
  "#35c770",
  "#36ca73",
  "#37cd76",
  "#3ad079",
  "#3dd27d",
  "#40d480",
  "#43d783",
  "#46d987",
  "#4adc8b",
  "#4ee08f",
  "#53e494",
  "#58e999",
  "#5eee9f",
  "#64f4a5",
  "#6af9ab",
  "#70ffb1",
  "#91ffc0",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > grey N=2 1`] = `
[
  "#090909",
  "#888888",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > grey N=4 1`] = `
[
  "#090909",
  "#575757",
  "#888888",
  "#e4e4e4",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > grey N=7 1`] = `
[
  "#090909",
  "#303030",
  "#575757",
  "#727272",
  "#888888",
  "#a7a7a7",
  "#e4e4e4",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > grey N=16 1`] = `
[
  "#090909",
  "#191919",
  "#2b2b2b",
  "#3e3e3e",
  "#4f4f4f",
  "#5e5e5e",
  "#6a6a6a",
  "#747474",
  "#7e7e7e",
  "#888888",
  "#919191",
  "#9b9b9b",
  "#a7a7a7",
  "#b9b9b9",
  "#cecece",
  "#e4e4e4",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > grey N=64 1`] = `
[
  "#090909",
  "#0d0d0d",
  "#101010",
  "#141414",
  "#181818",
  "#1c1c1c",
  "#202020",
  "#242424",
  "#282828",
  "#2c2c2c",
  "#313131",
  "#353535",
  "#393939",
  "#3e3e3e",
  "#424242",
  "#464646",
  "#4a4a4a",
  "#4e4e4e",
  "#525252",
  "#555555",
  "#595959",
  "#5c5c5c",
  "#5f5f5f",
  "#626262",
  "#656565",
  "#676767",
  "#6a6a6a",
  "#6c6c6c",
  "#6f6f6f",
  "#717171",
  "#737373",
  "#767676",
  "#787878",
  "#7a7a7a",
  "#7c7c7c",
  "#7e7e7e",
  "#818181",
  "#838383",
  "#858585",
  "#888888",
  "#8a8a8a",
  "#8d8d8d",
  "#8f8f8f",
  "#919191",
  "#939393",
  "#969696",
  "#989898",
  "#9b9b9b",
  "#9d9d9d",
  "#a0a0a0",
  "#a3a3a3",
  "#a7a7a7",
  "#ababab",
  "#afafaf",
  "#b4b4b4",
  "#b9b9b9",
  "#bebebe",
  "#c3c3c3",
  "#c8c8c8",
  "#cecece",
  "#d3d3d3",
  "#d9d9d9",
  "#dedede",
  "#e4e4e4",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > navy N=2 1`] = `
[
  "#000a19",
  "#1a2f6b",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > navy N=4 1`] = `
[
  "#00081f",
  "#1a2f6b",
  "#5b68a5",
  "#dee1ff",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > navy N=7 1`] = `
[
  "#000526",
  "#1a2f6b",
  "#31437f",
  "#4a5995",
  "#6f7bb8",
  "#a2aae9",
  "#dee1ff",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > navy N=16 1`] = `
[
  "#000721",
  "#001141",
  "#071f56",
  "#122861",
  "#1a2f6b",
  "#253975",
  "#2f417d",
  "#3a4a86",
  "#455491",
  "#53619d",
  "#6470ad",
  "#7883c0",
  "#8e98d6",
  "#a7afee",
  "#c1c7ff",
  "#dee1ff",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > navy N=64 1`] = `
[
  "#000722",
  "#00092a",
  "#000c33",
  "#000e3c",
  "#001145",
  "#01154b",
  "#04194f",
  "#061d54",
  "#092058",
  "#0c235b",
  "#0f255e",
  "#112761",
  "#132963",
  "#162b66",
  "#182d68",
  "#1a2f6b",
  "#1d316d",
  "#1f346f",
  "#223672",
  "#243874",
  "#263a76",
  "#293c78",
  "#2b3e7a",
  "#2e407c",
  "#30427e",
  "#324480",
  "#354682",
  "#374884",
  "#3a4a86",
  "#3c4c88",
  "#3f4f8b",
  "#41518d",
  "#445390",
  "#475692",
  "#4a5895",
  "#4d5b98",
  "#505e9b",
  "#54619e",
  "#5765a1",
  "#5b68a5",
  "#5f6ca8",
  "#636fac",
  "#6773b1",
  "#6c78b5",
  "#707cb9",
  "#7580be",
  "#7a85c3",
  "#7f8ac7",
  "#848ecc",
  "#8993d2",
  "#8f99d7",
  "#949edc",
  "#9aa3e1",
  "#a0a8e7",
  "#a5aeec",
  "#abb3f2",
  "#b1b8f7",
  "#b6befd",
  "#bdc4ff",
  "#c4caff",
  "#cbd0ff",
  "#d1d6ff",
  "#d8dcff",
  "#dee1ff",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > red N=2 1`] = `
[
  "#1a0006",
  "#cc3344",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > red N=4 1`] = `
[
  "#1a0006",
  "#8f0032",
  "#cc3344",
  "#ffdad4",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > red N=7 1`] = `
[
  "#1a0006",
  "#690026",
  "#a7183a",
  "#cc3344",
  "#e25652",
  "#ff8976",
  "#ffdad1",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > red N=16 1`] = `
[
  "#1a0006",
  "#360012",
  "#54001e",
  "#730029",
  "#8f0032",
  "#a21339",
  "#b0203d",
  "#be2941",
  "#cc3344",
  "#d6434a",
  "#df5051",
  "#ea6059",
  "#fa7266",
  "#ff9585",
  "#ffbaac",
  "#ffdad2",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > red N=64 1`] = `
[
  "#1a0006",
  "#200009",
  "#27000c",
  "#2d000e",
  "#340011",
  "#3b0014",
  "#420017",
  "#49001a",
  "#50001d",
  "#580020",
  "#5f0023",
  "#670025",
  "#6e0028",
  "#75002a",
  "#7c002c",
  "#83002e",
  "#890030",
  "#8f0032",
  "#950133",
  "#990735",
  "#9d0d37",
  "#a11238",
  "#a5153a",
  "#a8193b",
  "#ab1c3c",
  "#af1e3d",
  "#b2213e",
  "#b5233f",
  "#b8253f",
  "#bb2840",
  "#be2a41",
  "#c22c42",
  "#c52e42",
  "#c83143",
  "#cc3344",
  "#ce3746",
  "#d13b47",
  "#d33f49",
  "#d5424a",
  "#d8464c",
  "#da494d",
  "#dc4c4f",
  "#de4f50",
  "#e15352",
  "#e35654",
  "#e65a56",
  "#e95e58",
  "#ec625b",
  "#f0665d",
  "#f46b60",
  "#f86f64",
  "#fc7468",
  "#ff7c6e",
  "#ff8576",
  "#ff8f7f",
  "#ff9888",
  "#ffa192",
  "#ffaa9b",
  "#ffb2a4",
  "#ffbbae",
  "#ffc3b7",
  "#ffcbc0",
  "#ffd3c9",
  "#ffdad2",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > yellow N=2 1`] = `
[
  "#0f0800",
  "#e8d24a",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > yellow N=4 1`] = `
[
  "#0f0800",
  "#9d7f00",
  "#e8d24a",
  "#edea78",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > yellow N=7 1`] = `
[
  "#0f0800",
  "#463500",
  "#826800",
  "#b29300",
  "#ceb32d",
  "#e8d24a",
  "#f6e86b",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > yellow N=16 1`] = `
[
  "#0f0800",
  "#211600",
  "#352700",
  "#4b3800",
  "#614b00",
  "#765d00",
  "#8a6f00",
  "#9d7f00",
  "#ac8e00",
  "#b99a09",
  "#c3a61e",
  "#ccb12b",
  "#d5bb35",
  "#dec640",
  "#e8d24a",
  "#f9e664",
]
`;

exports[`v1 ramp characterization (frozen — must not change) > yellow N=64 1`] = `
[
  "#0f0800",
  "#130b00",
  "#170f00",
  "#1c1200",
  "#201600",
  "#251a00",
  "#2a1d00",
  "#2f2100",
  "#342500",
  "#392a00",
  "#3e2e00",
  "#433200",
  "#483600",
  "#4e3b00",
  "#533f00",
  "#584400",
  "#5e4800",
  "#634c00",
  "#685100",
  "#6d5500",
  "#725a00",
  "#785e00",
  "#7d6300",
  "#826700",
  "#866b00",
  "#8b6f00",
  "#907300",
  "#947700",
  "#987b00",
  "#9d7f00",
  "#a18300",
  "#a48600",
  "#a88a00",
  "#ac8d00",
  "#af9000",
  "#b29300",
  "#b59600",
  "#b89907",
  "#bb9c0e",
  "#bd9f14",
  "#c0a218",
  "#c2a51c",
  "#c4a820",
  "#c7aa23",
  "#c9ad26",
  "#cbaf29",
  "#cdb22c",
  "#cfb42f",
  "#d1b731",
  "#d4ba34",
  "#d6bc36",
  "#d8bf39",
  "#dac13b",
  "#dcc43d",
  "#dec740",
  "#e1c942",
  "#e3cc45",
  "#e5cf47",
  "#e8d24a",
  "#ead54e",
  "#ecd752",
  "#efdc58",
  "#f4e15e",
  "#f9e765",
]
`;
